tests/ui/resolve/issue-81508.stderr
error[E0433]: failed to resolve: use of undeclared type `Baz`
  --> $DIR/issue-81508.rs:11:20
   |
LL |     println!("{}", Baz::Bar);
   |                    ^^^ use of undeclared type `Baz`
   |
help: `Baz` is defined here, but is not a type
   |
LL -     let Baz: &str = "";
LL +     let : &str = "";
   |

error[E0433]: failed to resolve: use of undeclared type `Foo`
  --> $DIR/issue-81508.rs:20:24
   |
LL |         println!("{}", Foo::Bar);
   |                        ^^^ use of undeclared type `Foo`
   |
help: `Foo` is defined here, but is not a type
   |
LL -     use super::Foo;
LL +     use ;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
